# FishModel

./: CMakeLists.txt  Makefile  README.md  bm.cpp  bm.hpp  bmWithWalls.cpp  bmWithWalls.hpp  factory.cpp  factory.hpp  model.cpp  model.hpp  modeleCouzinLike.m  pythonAccess.py  pythonInterface.cpp  random.cpp  random.h  testModel.cpp  tmpVis.py  visualizer.py  zones.cpp  zones.hpp
